<resources>
    <string name="takahints" translatable="false">৳0</string>
    <string name="today_14th_january_2019" translatable="false">TODAY 14TH JANUARY, 2019</string>
    <string name="preferencekey" translatable="false">pref_currency_list</string>
    <string name="defaultvalue" translatable="false">Bangladeshi Taka - BDT</string>
    <string name="prefdate" translatable="false">pref_period_list</string>
    <string name="preflanguage" translatable="false">pref_language</string>
    <string name="preftimeformat" translatable="false">pref_time_format_list</string>
    <string name="prefremindaddexpense" translatable="false">pref_remind_add_expense</string>
    <string name="prefremindtoexport" translatable="false">pref_remind_to_export</string>
    <string name="mGoogleSignInClient_must_be_initialized" translatable="false">mGoogleSignInClient must be
        initialized
    </string>
    <string name="database_name" translatable="false">expensetracker_db</string>
    <string name="version" translatable="false">v</string>
    <string name="doller_symbol" translatable="false">$</string>
    <string name="point" translatable="false">.</string>
    <string name="license_details" translatable="false">license_details</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="zero" translatable="false">0</string>
    <string name="plus" translatable="false">+</string>
    <string name="subtraction" translatable="false">-</string>
    <string name="multiplication" translatable="false">*</string>
    <string name="division" translatable="false">/</string>
    <string name="equalto" translatable="false">=</string>
    <string name="united_states_dollar_usd" translatable="false">United States Dollar - USD</string>
    <string name="remotearth_notification" translatable="false">Remotearth Notification</string>
    <string name="dont_edit_this_meta_data" translatable="false">(Don\'t edit this meta data)</string>
    <string name="prefTimeFormatTitle">Change Date Format</string>
    <string name="welcometitle">Welcome To Expense Tracker</string>
    <string name="fb_signin_text">SIGN IN WITH FACEBOOK</string>
    <string name="gmail_signin_text">SIGN IN WITH GOOGLE</string>
    <string name="noaccounttext">Don\'t want to create account now?</string>
    <string name="signin_without_login">Continue Without Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EXPENSE TRACKER</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_overview">Overview</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_accounts">Accounts</string>
    <string name="from_account_card">CASH</string>
    <string name="from_catagory_card">GIFT</string>
    <string name="from_account">From Account</string>
    <string name="to_account">To Category</string>
    <string name="expense">Total Expense</string>
    <string name="balance">Total Balance</string>
    <string name="notes">Notes</string>
    <string name="currentdate">Today</string>
    <string name="previousdate">Yesterday</string>
    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_how_to">How to use</string>
    <string name="menu_about">About</string>
    <string name="menu_licenses">Licenses</string>
    <string name="menu_logout">Logout</string>
    <string name="add_expense">Add Expense</string>
    <string name="update_expense">Update Expense</string>
    <string name="preferencetitle">Select Currency</string>
    <string name="summarypreftext">Click me to choose your currency</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="expense_category">Expense Category</string>
    <string name="timeperiod">Time Period On App Start</string>
    <string name="day">Day</string>
    <string name="selectperiodfromhere">Select Period</string>
    <string name="select_time_format_from_here">Select Date Format</string>
    <string name="default_time_format" translatable="false">dd-MM-yyyy</string>
    <string name="default_language" translatable="false">English</string>
    <string name="warning">Warning</string>
    <string name="buy_message">To enjoy this service, You have to buy the app</string>
    <string name="ok">OK</string>
    <string name="no_data_available">No expense entry is available for this date range</string>
    <string name="icons_made_by">Category and Account - Icons made by Freepik from Flaticon</string>
    <string name="Authentication_with_Firebase_is_failed">Authentication with Firebase is failed</string>
    <string name="login_failed">Login failed</string>
    <string name="press_once_again_to_close_app">Press once again to close app</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_category">Add Category</string>
    <string name="attention">Attention</string>
    <string name="you_need_to_be_premium_user_to_add_more_categories">You need to be a premium user to add more categories</string>
    <string name="you_cannot_delete_this_account">You cannot delete this account</string>
    <string name="not_now">Not now</string>
    <string name="update_category">Update Category</string>
    <string name="update">Update</string>
    <string name="enter_a_name">Enter a name…</string>
    <string name="select_an_icon">Select an icon</string>
    <string name="update_account">Update Account</string>
    <string name="add_account">Add Account</string>
    <string name="add">Add</string>
    <string name="enter_a_name_for_account">Enter a name for account</string>
    <string name="select_an_icon_for_the_account">Select an icon for the account</string>
    <string name="you_cannot_delete_this_category">You cannot delete this category</string>
    <string name="deleting_this_category_will_remove_expenses_related_to_this_also_are_you_sure_you_want_to_delete">"Deleting this category will remove expenses related to this also. Are you sure, You want to Delete?     "</string>
    <string name="category_deleted_successfully">Category Deleted Successfully</string>
    <string name="select_account">Select Account</string>
    <string name="select_category">Select Category</string>
    <string name="are_you_sure_you_want_to_delete_this_expense_entry">Are you sure, you want to delete this expense entry</string>
    <string name="successfully_added">Successfully added.</string>
    <string name="successfully_deleted_expense_entry">Successfully deleted expense entry.</string>
    <string name="report_from_expense_tracker">Reports From Expense Tracker</string>
    <string name="choose_email_client_to_send_report">Choose Email Client To Send Report</string>
    <string name="report_sending_failed_please_try_again_later">Report Sending Failed Please Try Again Later</string>
    <string name="authentication_with_firebase_is_failed">Authentication with Firebase is failed</string>
    <string name="google_signin_failed">Google signin failed</string>
    <string name="to_use_this_features_your_need_permission_for_that_you_can_access_it_in_app_settings">To use this feature app needs permission for that, You can enable it in app settings.</string>
    <string name="go_to_settings">Go To Setting</string>
    <string name="cancel">Cancel</string>
    <string name="date_category_amount_from_note">Date,Category,Amount,From,Note</string>
    <string name="expense_data_not_available_to_export">No expense data is available to export.</string>
    <string name="expense_data_not_available_to_upload">No expense data is available to backup.</string>
    <string name="select_your_currency">Select Your Currency</string>
    <string name="go">Go</string>
    <string name="will_replace_your_current_entries">This will replace your current entries. Are you sure you want to import data?</string>
    <string name="no_supported_file">No expense tracker supported file is found</string>
    <string name="select_csv">Select a .csv file</string>
    <string name="read_write_permission_is_needed">Read/write permission on external storage is needed to export/import data.</string>
    <string name="read_write_permission_is_needed_enable_from_settings">Read/write permission on external storage is needed to export/import data. Please enable it from device settings.</string>
    <string name="internet_connection_needed">Internet connection is needed to perform this action.</string>
    <string name="without_this_app_cannot_export">Without this permission, the app cannot export data.</string>
    <string name="storage_permission_is_needed_to_export_data">"Writing to external storage permission is needed to export data. Do you want to continue by giving the permission?     "</string>
    <string name="storage_permission_needed_still_can_enable_from_settings">Writing to external storage permission is needed to export data. You can still enable this permission from app settings.</string>
    <string name="bills" translatable="false">Bills</string>
    <string name="car" translatable="false">Car</string>
    <string name="clothes" translatable="false">Clothes</string>
    <string name="communication" translatable="false">Communication</string>
    <string name="eating_out" translatable="false">Eating out</string>
    <string name="entertainment" translatable="false">Entertainment</string>
    <string name="food" translatable="false">Food</string>
    <string name="gift" translatable="false">Gift</string>
    <string name="health" translatable="false">Health</string>
    <string name="pets" translatable="false">Pets</string>
    <string name="sports" translatable="false">Sports</string>
    <string name="taxi" translatable="false">Taxi</string>
    <string name="toiletry" translatable="false">Toiletry</string>
    <string name="transport" translatable="false">Transport</string>
    <string name="family" translatable="false">Family</string>
    <string name="cash" translatable="false">Cash</string>
    <string name="bank" translatable="false">Bank</string>
    <string name="loan" translatable="false">Loan</string>
    <string name="select_day">Select Day</string>
    <string name="category">Category</string>
    <string name="choose_icon">Choose an icon</string>
    <string name="add_btntext">Add</string>
    <string name="account_name">Account Name</string>
    <string name="enter_amount">Enter an amount…</string>
    <string name="add_amount">Add Amount</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="expense_note">EXPENSE NOTE</string>
    <string name="write_a_note_here">Write a note…</string>
    <string name="export_data">Export Data</string>
    <string name="buy_product">Purchase</string>
    <string name="import_data">Import Data</string>
    <string name="already_purchased">You already purchased this item</string>
    <string name="change_language">Change Language</string>
</resources>