<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="@string/preferencekey"
        android:title="@string/preferencetitle"
        android:defaultValue="United States Dollar - USD"
        android:entryValues="@array/currency"
        android:entries="@array/currency"
        android:icon="@drawable/settings_currency"
        android:summary="@string/summarypreftext"/>

    <ListPreference
            android:key="@string/prefdate"
            android:title="@string/timeperiod"
            android:defaultValue="@string/daily"
            android:entryValues="@array/TimePeriod"
            android:entries="@array/TimePeriod"
            android:icon="@drawable/settings_timeperiod"
            android:summary="@string/selectperiodfromhere"/>

    <ListPreference
            android:key="@string/preftimeformat"
            android:title="@string/prefTimeFormatTitle"
            android:defaultValue="@string/default_time_format"
            android:entryValues="@array/TimePeriod"
            android:entries="@array/TimeFormat"
            android:icon="@drawable/ic_change_date_formate"
            android:summary="@string/select_time_format_from_here"/>

</PreferenceScreen>