<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
            android:key="@string/preferencekey"
            android:title="@string/preferencetitle"
            android:entryValues="@array/currency"
            android:entries="@array/currency"
            android:icon="@drawable/settings_currency"
            android:summary="@string/summarypreftext"/>

    <ListPreference
        android:defaultValue="@string/default_language"
        android:entries="@array/lanugages"
        android:entryValues="@array/lanugages"
        android:icon="@drawable/ic_change_date_formate"
        android:key="@string/preflanguage"
        android:summary="@string/default_language"
        android:title="@string/change_language" />

</PreferenceScreen>