<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_categories"
                android:icon="@drawable/ic_categories"
                android:title="@string/menu_categories"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings"/>

        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout"/>

    </group>

    <item android:title="Others">

        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/nav_about"
                        android:icon="@drawable/ic_about"
                        android:title="@string/menu_about"/>

                <!--<item-->
                        <!--android:id="@+id/nav_privacypolicy"-->
                        <!--android:icon="@drawable/ic_privacypolicy"-->
                        <!--android:title="@string/privacy_policy"/>-->

                <item
                        android:id="@+id/nav_licenses"
                        android:icon="@drawable/ic_license"
                        android:title="@string/menu_licenses"/>
            </group>
        </menu>
    </item>

</menu>
