<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/digitOne"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/one"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/digitTwo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/two"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/digitThree"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/three"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/division"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/operator_selector"
            android:text="@string/division"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/digitFour"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/four"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/digitFive"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/five"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/digitSix"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/six"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/subtraction"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/operator_selector"
            android:text="@string/subtraction"
            android:textColor="#ecf0f1"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/digitSeven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/seven"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/digitEight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/eight"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/digitNine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/nine"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/multiplication"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/operator_selector"
            android:text="x"
            android:textColor="#ecf0f1"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/point"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/digitZero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/zero"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/equalto"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/selector"
            android:text="@string/equalto"
            android:textColor="#ecf0f1"
            android:textSize="25sp" />

        <Button
            android:id="@+id/addition"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@drawable/operator_selector"
            android:text="@string/plus"
            android:textColor="#ecf0f1"
            android:textSize="25sp" />
    </LinearLayout>
</LinearLayout>
