<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:padding="20dp"
        android:layout_height="wrap_content">
    <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_category"
            android:textColor="@color/colorPrimary"
            android:padding="7dp"
            android:textStyle="bold"
            android:textSize="18sp"/>
    <LinearLayout
            android:id="@+id/ln"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/nameEdtxt"
                android:hint="@string/enter_a_name"
                android:textSize="18sp"
                android:inputType="textPersonName"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_icon"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:textStyle="bold"
                android:textSize="18sp"/>
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/accountrecyclearView"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/okBtn"
                android:text="@string/add_btntext"
                android:textColor="@color/textcolorwhite"
                android:background="@drawable/btn_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>