<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">


    <ImageView
        android:layout_width="@dimen/logo_height_weight"
        android:layout_height="@dimen/logo_height_weight"
        android:src="@mipmap/ic_logo_layer" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/welcometitle"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/facebook_login_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/btn_for_facebook"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/fb_signin_text"
        android:textColor="@color/textcolorwhite"
        android:textSize="15sp"
        app:drawableStartCompat="@drawable/ic_facebook" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googlebutton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/btn_for_google"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/gmail_signin_text"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:drawableStartCompat="@drawable/ic_google" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/noaccounttext"
        android:textAllCaps="false"
        android:textColor="@color/Ashcolor"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/withoutloginbutton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/btn_background"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/signin_without_login"
        android:textColor="@color/textcolorwhite"
        android:textSize="15sp"
        app:drawableStartCompat="@drawable/ic_withoutlogin" />

</LinearLayout>